scene builder tests and some files created

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>com.john.habits.App</mainClass>
+          <mainClass>com.john.habits.Main</mainClass>
         </configuration>
       </plugin>
     </plugins>
